--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,3 +40,47 @@
 img {
   width: 20vw;
 }
+
+.welcome {
+  font-size: 100px;
+  font-family: 'Arizonia', cursive;
+}
+.home {
+  background-image: url('./assets/recipe.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.navbar {
+  justify-content: space-between;
+  align-items: center;
+  /* background-color: blue; */
+  padding: 1em;
+  min-height: 2em;
+}
+.navbar a {
+  text-decoration: none;
+  margin-left: 0.5em;
+}
+
+.submit {
+  background-color: blue;
+  color: white;
+  border: 2px solid black;
+}
+.add {
+  background-color: blue;
+  color: white;
+  border: 2px solid black;
+}
+.additional {
+  background-color: blue;
+  color: white;
+  border: 2px solid black;
+}
+
+p {
+  color: white;
+  font-family: 'Arizonia', cursive;
+  font-size: 10px;
+}
