--- a/client/src/App.css
+++ b/client/src/App.css
@@ -55,12 +55,14 @@ img {
   justify-content: space-between;
   align-items: center;
   /* background-color: blue; */
-  padding: 1em;
+
+  margin-bottom: 15px;
   min-height: 2em;
 }
 .navbar a {
   text-decoration: none;
   margin-left: 0.5em;
+  padding: 5em;
 }
 
 .submit {
@@ -80,7 +82,45 @@ img {
 }
 
 p {
-  color: white;
+  color: green;
   font-family: 'Arizonia', cursive;
   font-size: 50px;
+}
+.ingredientlist {
+  font-family: 'Indie Flower', cursive;
+  font-size: 20px;
+  font-weight: 900;
+}
+
+.instructions {
+  color: black;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bolder;
+}
+
+.recipename {
+  color: black;
+  font-family: 'Oswald', sans-serif;
+}
+.recipecuisine {
+  color: orange;
+}
+.recipedescription {
+  color: black;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 900;
+}
+.time {
+  color: black;
+  font-family: 'Luckiest Guy', cursive;
+}
+.addingredientbutton {
+  color: white;
+  font-size: 10px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+.addinstructionbutton {
+  color: white;
+  font-size: 10px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
